syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
}

message CreateUserRequest {
  string userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string authProvider = 5;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string authProvider = 5;
  bool emailVerified = 6;
  string createdAt = 7;
  string updatedAt = 8;
}
